--- a/platforms/browser/www/quiz_presentation.html
+++ b/platforms/browser/www/quiz_presentation.html
@@ -56,14 +56,17 @@
 <body>
     <div data-role="page" class="app">
 
-        <div data-role="header"></div>
+        <h1>Aprensentação</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam non beatae consequuntur, id veritatis officia, excepturi placeat harum neque possimus nisi? Laborum quod porro illo adipisci autem harum consequuntur deserunt!</p>
 
-        <div data-role="nav-bar"></div>
+        <a href="quiz1_question.html"><button>click</button></a>
+       
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/my.js"></script>
     <script type="text/javascript">
         app.initialize();
     </script>
