--- a/www/terra_menu.html
+++ b/www/terra_menu.html
@@ -60,12 +60,25 @@
 
 
 
-        <div data-role="nav-bar"></div>
+        <div data-role="nav-bar" id="menu">
+
+            <div class="navbar">
+              <ul>
+                    <li><a href=""><img src="img/tasks.png" alt=""></li></a>
+                    <li><a href=""><img src="img/terra_m.png" alt=""></li></a>
+                    <li><a href=""><img src="img/shop.png" alt=""></li></a>
+
+                </ul>
+            </div>
+
+
+        </div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/my.js"></script>
     <script type="text/javascript">
         app.initialize();
     </script>
