--- a/www/quiz_presentation.html
+++ b/www/quiz_presentation.html
@@ -66,6 +66,7 @@
     <script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/my.js"></script>
     <script type="text/javascript">
         app.initialize();
     </script>
